--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Design</h1>
+    <h1 class="title">Broadway Design</h1>
     <a href="./Home.html#">Home</a>
   </br>
   <a href="./about.html#">About</a>
@@ -17,6 +17,23 @@
 </br>
 <a href="./contact.html#">Contact</a>
 </br>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" />
+<h2 class="Process">Our Process</h2>
+</br>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
+</br>
+<h2 class="the Rest">Identify</h2>
+</br>
+<h2 class="the Rest">Understand</h2>
+</br>
+<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" />
+</br>
+<h2 class="the Rest">Execute</h2>
+</br>
+<h2 class="the Rest">Portfolio</h2>
+</br>
+<h2 class="the Rest">Team</h2>
+</br>
+<h2 class="the Rest">Contact</h2>
+</br>
   </body>
 </html>
