--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1 class="title">Broadway Design</h1>
+
     <a href="./Home.html#">Home</a>
   </br>
   <a href="./about.html#">About</a>
@@ -17,23 +18,28 @@
 </br>
 <a href="./contact.html#">Contact</a>
 </br>
+
 <h2 class="Process">Our Process</h2>
-</br>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
-</br>
+
 <h2 class="the Rest">Identify</h2>
-</br>
+  <p>We focus on the most imortant details.</p>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" />
+
 <h2 class="the Rest">Understand</h2>
-</br>
-<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" />
-</br>
+  <p>We study our projects inside and out.</p>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" />
+
 <h2 class="the Rest">Execute</h2>
-</br>
+  <p>We put everything we have into our work.</p>
+
+<h2 class="New York">Designed in New York</h2>
+
 <h2 class="the Rest">Portfolio</h2>
-</br>
+
 <h2 class="the Rest">Team</h2>
-</br>
+
 <h2 class="the Rest">Contact</h2>
-</br>
+
   </body>
 </html>
