--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1 class="title">Broadway Design</h1>
+    <header>
+      <h1 class="title">Broadway Design</h1>
 
-    <a href="./Home.html#">Home</a>
-  </br>
-  <a href="./about.html#">About</a>
-</br>
-<a href="./Work.html#">Work</a>
-</br>
-<a href="./team.html#">Team</a>
-</br>
-<a href="./contact.html#">Contact</a>
-</br>
+      <a href="./Home.html#">Home</a>
+    </br>
+      <a href="./about.html#">About</a>
+      </br>
+      <a href="./Work.html#">Work</a>
+      </br>
+      <a href="./team.html#">Team</a>
+      </br>
+      <a href="./contact.html#">Contact</a>
+    </header>
 
 <h2 class="Process">Our Process</h2>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
@@ -36,10 +37,16 @@
 <h2 class="New York">Designed in New York</h2>
 
 <h2 class="the Rest">Portfolio</h2>
+  <p>Coming Soon</p>
 
 <h2 class="the Rest">Team</h2>
+  <p>We're Hiring!</p>
 
 <h2 class="the Rest">Contact</h2>
-
+  <p>Phone: (555)-555-5555</p>
+  <p>E-mail: test@example.com</p>
+  <p>Twitter: @test</p>
+<footer>
+  <h3>Broadway 2016 <a href="./Home.html#">Home</a>  <a href="./about.html#">About</a> <a href="./Work.html#">Work</a> <a href="./team.html#">Team</a> <a href="./contact.html#">Contact</a></h3>
   </body>
 </html>
