--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
     <header>
       <h1 class="title">Broadway Design</h1>
 
+  <h3>
       <a href="./Home.html#">Home</a>
     </br>
+  </br>
       <a href="./about.html#">About</a>
       </br>
+        </br>
       <a href="./Work.html#">Work</a>
       </br>
+        </br>
       <a href="./team.html#">Team</a>
       </br>
+        </br>
       <a href="./contact.html#">Contact</a>
+    </h3>
     </header>
 
 <h2 class="Process">Our Process</h2>
@@ -47,6 +53,6 @@
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
 <footer>
-  <h3>Broadway 2016 <a href="./Home.html#">Home</a>  <a href="./about.html#">About</a> <a href="./Work.html#">Work</a> <a href="./team.html#">Team</a> <a href="./contact.html#">Contact</a></h3>
+  <h3 class="foot title">Broadway 2016 <a href="./Home.html#">Home</a>  <a href="./about.html#">About</a> <a href="./Work.html#">Work</a> <a href="./team.html#">Team</a> <a href="./contact.html#">Contact</a></h3>
   </body>
 </html>
