--- a/index.html
+++ b/index.html
@@ -29,30 +29,36 @@
 <h2 class="Process">Our Process</h2>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
 
-<h2 class="the Rest">Identify</h2>
+<h2 class="Rest">Identify</h2>
   <p>We focus on the most imortant details.</p>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" />
 
-<h2 class="the Rest">Understand</h2>
+<h2 class="Rest">Understand</h2>
   <p>We study our projects inside and out.</p>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" />
 
-<h2 class="the Rest">Execute</h2>
+<h2 class="Rest">Execute</h2>
   <p>We put everything we have into our work.</p>
 
-<h2 class="New York">Designed in New York</h2>
+<h2 class="ny">Designed in New York</h2>
 
-<h2 class="the Rest">Portfolio</h2>
+<h2 class="Rest">Portfolio</h2>
   <p>Coming Soon</p>
 
-<h2 class="the Rest">Team</h2>
+<h2 class="Rest">Team</h2>
   <p>We're Hiring!</p>
 
-<h2 class="the Rest">Contact</h2>
+<h2 class="Rest">Contact</h2>
   <p>Phone: (555)-555-5555</p>
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
 <footer>
-  <h3 class="foot title">Broadway 2016 <a href="./Home.html#">Home</a>  <a href="./about.html#">About</a> <a href="./Work.html#">Work</a> <a href="./team.html#">Team</a> <a href="./contact.html#">Contact</a></h3>
+  <h3 class="foot title">Broadway 2016
+    <a href="./Home.html#">Home</a>
+    <a href="./about.html#">About</a>
+    <a href="./Work.html#">Work</a>
+    <a href="./team.html#">Team</a>
+    <a href="./contact.html#">Contact</a>
+  </h3>
   </body>
 </html>
