--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
 <footer>
-  <h3 class="foot title">Broadway 2016
-    <a href="./Home.html#">Home</a>
-    <a href="./about.html#">About</a>
-    <a href="./Work.html#">Work</a>
-    <a href="./team.html#">Team</a>
-    <a href="./contact.html#">Contact</a>
-  </h3>
+  <h4>Broadway 2016</h4> <a href="./Home.html#">Home</a> <a href="./about.html#">About</a> <a href="./Work.html#">Work</a> <a href="./team.html#">Team</a> <a href="./contact.html#">Contact</a>
+</footer>
   </body>
 </html>
