--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
   </head>
   <body>
     <header>
-      <h1 class="title">Broadway Design</h1>
+      <h1 class="title" id="title">Broadway Design</h1>
 
   <h3>
-      <a href="./Home.html#">Home</a>
+      <a href="#title">Home</a>
     </br>
   </br>
-      <a href="./about.html#">About</a>
+      <a href="#process">About</a>
       </br>
         </br>
-      <a href="./Work.html#">Work</a>
+      <a href="#portfolio">Work</a>
       </br>
         </br>
-      <a href="./team.html#">Team</a>
+      <a href="#team">Team</a>
       </br>
         </br>
-      <a href="./contact.html#">Contact</a>
+      <a href="#contact">Contact</a>
     </h3>
     </header>
 
-<h2 class="Process">Our Process</h2>
+<h2 class="Process" id="process">Our Process</h2>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
 
 <h2 class="Rest">Identify</h2>
@@ -42,18 +42,18 @@
 
 <h2 class="ny">Designed in New York</h2>
 
-<h2 class="Rest">Portfolio</h2>
+<h2 class="Rest" id="portfolio">Portfolio</h2>
   <p>Coming Soon</p>
 
-<h2 class="Rest">Team</h2>
+<h2 class="Rest" id="team">Team</h2>
   <p>We're Hiring!</p>
 
-<h2 class="Rest">Contact</h2>
+<h2 class="Rest" id="contact">Contact</h2>
   <p>Phone: (555)-555-5555</p>
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
-<footer>
-  <h4>Broadway 2016</h4> <a href="./Home.html#">Home</a> <a href="./about.html#">About</a> <a href="./Work.html#">Work</a> <a href="./team.html#">Team</a> <a href="./contact.html#">Contact</a>
-</footer>
+
+<h4>Broadway 2016 <a href="#title" class="footer">Home</a> <a href="#process" class="footer">About</a> <a href="#portfolio" class="footer">Work</a> <a href="#team" class="footer">Team</a> <a href="#contact" class="footer">Contact</a>
+</h4>
   </body>
 </html>
